--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -434,7 +434,7 @@
 % ---
 \section{Origem e definição de mapas conceituais}
 % ---
-O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança congnitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas Novak desenvolveu um método baseado nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}. A primeira ideia é que novos significados são criados a partir de conceitos e proposições previamente conhecidos pelo aprendiz. A segunda, é que a estrutura cognitiva do indivíduo é organizada hierarquicamente, com conceitos mais gerais ocupando posições superiores, acima dos conceitos mais específicos e complexos. Já a terceira idéia é que durante o processo de aprendizagem os conceitos vão se tornando mais específicos e precisos.
+O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança cognitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas Novak desenvolveu um método baseado nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}. A primeira ideia é que novos significados são criados a partir de conceitos e proposições previamente conhecidos pelo aprendiz. A segunda, é que a estrutura cognitiva do indivíduo é organizada hierarquicamente, com conceitos mais gerais ocupando posições superiores, acima dos conceitos mais específicos e complexos. Já a terceira ideia é que durante o processo de aprendizagem os conceitos vão se tornando mais específicos e precisos.
 
 \begin{citacao}[english]
 	First, Ausubel sees the development
@@ -444,7 +444,7 @@ O mapas conceituais foram criados na década de 70 durante um estudo de Novak qu
 	precise, and better integrated with other concepts and propositions\cite{Novak2005}.
 \end{citacao}
 
-Assim foi criada essa ferramenta gráfica, que tem como objetivo fazer uma representação do conhecimento. Um mapa conceitual é constituido por interligações entre dois ou mais conceitos através de uma palavra de forma a gerar um significado. Ele é construido ligando-se um conceito a outro, através de um arco que contém uma palavra descritiva, que é usada para criar uma relação significativa entre os conceitos. Além disso, os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
+Assim foi criada essa ferramenta gráfica, que tem como objetivo fazer uma representação do conhecimento. Um mapa conceitual é constituído por interligações entre dois ou mais conceitos através de uma palavra de forma a gerar um significado. Ele é construído ligando-se um conceito a outro, através de um arco que contém uma palavra descritiva, que é usada para criar uma relação significativa entre os conceitos. Além disso, os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
 \begin{figure}[htb]
 	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual}
 	\begin{center}
@@ -456,15 +456,15 @@ Assim foi criada essa ferramenta gráfica, que tem como objetivo fazer uma repre
 
 Os mapas conceituais podem ter diversas aplicações na educação, podem ser utilizados para representar o conhecimento adquirido em uma aula, ou então o conteúdo de um capítulo algum livro lido. Por se tratar de uma representação que é alimentada com novos conceitos conforme eles são adquiridos, pode ser utilizado pelo professor para acompanhar a aprendizagem de um estudante durante todo o período de um curso. Além disso, como os mapas conseguem representar a estrutura cognitiva de um indivíduo, eles podem ser utilizados também como método de avaliação de aprendizagem\cite{Perin2014}.
 
-A confiabilidade da avaliação da aprendizagem tradicional,como textos dissertativos e questões de multipla escolha, tem sido questionada por pesquisadores e educadores. Nestes tipos de teste apenas os acertos são contabilizados e os erros são descartados, isto pode fazer com que informações importantes para a avaliação sejam desprezadas.
+A confiabilidade da avaliação da aprendizagem tradicional,como textos dissertativos e questões de múltipla escolha, tem sido questionada por pesquisadores e educadores. Nestes tipos de teste apenas os acertos são contabilizados e os erros são descartados, isto pode fazer com que informações importantes para a avaliação sejam desprezadas.
 As provas tradicionais não proporcionam a possibilidade do estudante apresentar como construiu o seu aprendizado. Elas conseguem avaliar somente a aprendizagem mecânica, não mostrando como que o aprendiz alterou suas estruturas cognitivas.
 Os mapas conceituais tem se destacado como alternativa a avaliação tradicional, pois conseguem demonstrar com facilidade as modificações cognitivas que ocorrem durante o processo de aprendizagem do estudante\cite{Dutra2002}.
 
 \section{Mapas conceituais e tecnologia da informação}
 
-A construção de mapas conceituais é muito simples, uma caneta e um pedaço de papel são ferramentas suficientes para a confecção desse grafo. Porém a tarefa de revisa-lo, armazena-lo, e edita-lo a longo prazo  pode ser muito cansativa e complexa. A introdução do uso de computadores na confecção de mapas pode facilitar a tarefa \cite{Novak2006}.
+A construção de mapas conceituais é muito simples, uma caneta e um pedaço de papel são ferramentas suficientes para a confecção desse grafo. Porém a tarefa de revisá-lo, armazená-lo, e editá-lo a longo prazo  pode ser muito cansativa e complexa. A introdução do uso de computadores na confecção de mapas pode facilitar a tarefa \cite{Novak2006}.
 
-Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar apenas os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais, devido a semelhança entre os diagramas\cite{Perin2014}. Por exemplo, um mapa mental apresenta ligações entre ideias, o que é muito semelhante a um mapa conceitual, porém o primeiro não apresenta uma palavra descrevendo as ligações. Portanto uma aplicação de criação de mapas mentais não permite a construção de um mapa conceitual. Segundo a pesquisa de \citeonline{Perin2014}, apenas o software CmapTools pode ser considerada uma ferramenta que oferece suporte a criação de mapas conceituais.
+Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar apenas os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais, devido a semelhança entre os diagramas\cite{Perin2014}. Um mapa mental, por exemplo, é muito semelhante a um mapa conceitual pois apresenta ligações entre ideias, mas ao contrario de um mapa mental não possui uma palavra descritiva ligando essas ideias e criando organicidade entre as ideias. Portanto uma aplicação de criação de mapas mentais não permite a construção de um mapa conceitual. Segundo a pesquisa de \citeonline{Perin2014}, apenas o software CmapTools pode ser considerada uma ferramenta que oferece suporte a criação de mapas conceituais.
 
 \begin{citacao}[english]
 	CmapTools  is  a  software  environment  developed  at  the  Institute for Human and Machine Cognition (IHMC) that empowers users, individually or  collaboratively, to represent their knowledge using concept maps, to share them with peers and colleagues, and to publish them\cite{Canas2004}.
@@ -499,7 +499,7 @@ Observamos uma carência de softwares que permitam a construção e edição de 
 
 A educação a distância é definida de diversas  formas por autores diferentes, apesar disso é possível extrair destas definições distintas um conceito de EAD. Abaixo alguns exemplos dessas definições:
  \begin{itemize}
- 	\item Dohemem define EAD como um sistema no qual o aluno estuda sozinho através de um material que lhe é apresentado, sendo o desempenho do estudante acompanhado por um grupo de professores. Esta forma de estudo é possivel utilizando meios de comunicação de longa distância.
+ 	\item Dohemem define EAD como um sistema no qual o aluno estuda sozinho através de um material que lhe é apresentado, sendo o desempenho do estudante acompanhado por um grupo de professores. Esta forma de estudo é possível utilizando meios de comunicação de longa distância.
  	\item Peters conceitua EAD como um método de compartilhar conhecimento através do uso de meios de comunicação, através do qual se torna possível instruir um grande número de alunos.
  	\item segundo Moore EAD é um método no qual os professores agem de forma independente das ações dos estudantes e a comunicação entre ambos deve ser feita através de meios impressos ou eletrônicos.
  	\item o conceito Chaves é de que a EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos.  
@@ -510,22 +510,22 @@ A educação a distância é definida de diversas  formas por autores diferentes
  	Art. 1o  Para os fins deste Decreto, caracteriza-se a educação a distância como modalidade educacional na qual a mediação didático-pedagógica nos processos de ensino e aprendizagem ocorre com a utilização de meios e tecnologias de informação e comunicação, com estudantes e professores desenvolvendo atividades educativas em lugares ou tempos diversos\cite{BRASIL2005}.
  \end{citacao}
  
-Em sintese é possível definir a educação a distância como um método de ensino no qual estudante e professor ficam separados físicamente e a interaçao e feita através de tecnologias de comunicação (que podem ser dos mais diversos) de maneira a contornar esta separação. Hoje em dia, como sabemos, utiliza-se a Internet como meio de interação entre professor e alunos, mas antes da Internet outras tecnologias de comunicação fizeram parte da historia da educação a distância permitindo que o aprendizado de cursos diversos não precisassem obrigatoriamente de uma sala de aula, o que abriu horizontes para professores e alunos.
+Em síntese é possível definir a educação a distância como um método de ensino no qual estudante e professor ficam separados fisicamente e a interação e feita através de tecnologias de comunicação (que podem ser dos mais diversos) de maneira a contornar esta separação. Hoje em dia, como sabemos, utiliza-se a Internet como meio de interação entre professor e alunos, mas antes da Internet outras tecnologias de comunicação fizeram parte da historia da educação a distância permitindo que o aprendizado de cursos diversos não precisassem obrigatoriamente de uma sala de aula, o que abriu horizontes para professores e alunos.
 
 \section{Origem da educação a distância}
-A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet, porém a sua origem exata é alvo de controvérsias. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Àsia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.
+A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet, porém a sua origem exata é alvo de controvérsias. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Ásia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.
 
 \citeonline{Sherry1996} aponta os cursos por correspondência europeus como a primeira forma de educação a distância.
-Segundo \citeonline{landim1997} inicialmente a educação a distância fazia parte de iniciativas isoladas de alguns educadores, sendo somente instituicionalizada na segunda metade do século XIX.
+Segundo \citeonline{landim1997} inicialmente a educação a distância fazia parte de iniciativas isoladas de alguns educadores, sendo somente institucionalizada na segunda metade do século XIX.
 
-Alguns acontecimentos importante na história da EAD foram a criação da primeira escola de línguas por correspondência em Berlin, no ano de 1856; em 1892 foi criada a Divisão de Ensino por Correspondência na Univeridade de Chicago; o nascimento da Tele Escola Primária do Ministério da Cultura e Educação, na Argentina em 1960; entre outros\cite{Alves2011}.
+Alguns acontecimentos importante na história da EAD foram a criação da primeira escola de línguas por correspondência em Berlim, no ano de 1856; em 1892 foi criada a Divisão de Ensino por Correspondência na Universidade de Chicago; o nascimento da Tele Escola Primária do Ministério da Cultura e Educação, na Argentina em 1960; entre outros\cite{Alves2011}.
 
 A evolução da EAD pode ser resumida em cinco gerações, de acordo com as tecnologias utilizadas. A primeira geração seria a educação por correspondência. Já a segunda, ocorre na década de 60 e se baseia no uso do rádio e televisão. A terceira, a partir dos anos 80, é representada por softwares multimídia e acesso a Internet como forma de obtenção de conhecimento. A quarta geração consiste no uso de ambientes virtuais de aprendizagem onde a interação entre professores e estudantes é realizada através da Internet. A quinte e última é representada por ambientes de realidade virtual\cite{maia2003}.
 
 Atualmente a educação a distância está relacionada ao uso de um AVA, que nada mais é que um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. É um ambiente virtual de aprendizagem que tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interação entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA utilizado em algumas instituições de ensino é o Moodle.
    
 \section{O Moodle}
-O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é um ambiente virtual de aprendizagem que foi criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuido. Ele é amplamente usado por instituições em todo o mundo e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas. \cite{Ribeiro2007}
+O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é um ambiente virtual de aprendizagem que foi criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuído. Ele é amplamente usado por instituições em todo o mundo e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas. \cite{Ribeiro2007}
 
 O \begin{otherlanguage*}{english}\textit{Moodle}\end{otherlanguage*} trabalha com cinco perfis de usuário: administrador, criador de cursos, professor, aluno e visitante. O administrador é o responsável técnico, é ele quem realiza a instalação e configuração do ambiente, além de manter ele funcionando corretamente. Já o criador de cursos tem como responsabilidade a criação e configuração dos cursos disponíveis na plataforma. Por sua vez, o professor tem como função o acompanhamento dos estudantes e a inserção de recursos e tarefas nos cursos. O aluno é quem realiza o curso, é ele quem vai utilizar os recursos e tarefas disponíveis no AVA. Por fim, o visitante é um usuário que só tem acesso as informações disponíveis na tela inicial do sistema. A \autoref{fig_moodle} mostra a interface de um curso no Moodle.
 
@@ -556,9 +556,9 @@ O fato do Moodle ser modular, ou seja, ser composto por módulos instaláveis, c
 
 Vimos como os mapas conceituais são importantes para educação, seja para auxiliar o estudante a aprender novos conceitos, ou como método de avaliação, além de algumas outras aplicações educacionais. Porém, segundo \citeonline{Perin2014} não é só no ensino que há interesse no uso de mapas conceituais e de aplicações para manipulação dos mesmos, tendo o setor empresarial um grande interesse nestas ferramentas. 
 
-Apesar de haver este grande interesse academico e empresarial em ferramentas computacionais para criação e manipulação de mapas, a fragmentação das pesquisas nesta área impede que o desenvolvimento destas aplicações ocorra de forma acelerada. Além disso, a integração de ferramentas já existentes facilitaria o progresso de novas pesquisas.
+Apesar de haver este grande interesse acadêmico e empresarial em ferramentas computacionais para criação e manipulação de mapas, a fragmentação das pesquisas nesta área impede que o desenvolvimento destas aplicações ocorra de forma acelerada. Além disso, a integração de ferramentas já existentes facilitaria o progresso de novas pesquisas.
 
-Se houvesse uma infraestrutura de apoio a criação e manipulação de mapas conceituais o desenvolvimento de novas ferramentas seria facilitado. Um pesquisador poderia criar uma nova solução mais facilmente se não houvesse a necessidade dele se preocupar com toda uma estrutura de gestão de mapas. Por exemplo, alguém que queira desenvolver uma aplicação que avalie mapas conceituais poderia utilizar o conteudo existente previamente em uma solução computacional de criação e armazenamento de mapas.
+Se houvesse uma infraestrutura de apoio a criação e manipulação de mapas conceituais o desenvolvimento de novas ferramentas seria facilitado. Um pesquisador poderia criar uma nova solução mais facilmente se não houvesse a necessidade dele se preocupar com toda uma estrutura de gestão de mapas. Por exemplo, alguém que queira desenvolver uma aplicação que avalie mapas conceituais poderia utilizar o conteúdo existente previamente em uma solução computacional de criação e armazenamento de mapas.
 
 Um outro problema apontado por \citeonline{Perin2014} é a dificuldade que a sociedade tem para acessar os resultados das pesquisas.
 \begin{citacao}
@@ -573,7 +573,7 @@ Assim foi proposto por \citeonline{Perin2014} a criação de uma plataforma deno
 
 \subsection{Computação em Nuvem}
 
-O termo computação em nuvem teve sua origem em 2006 durante uma palestra Eric Schmidt sobre como o Google gerenciava seus servidores\cite{taurion2009}. A palavra nuvem é uma abstração para a Internet e toda a sua complexidade de infraestrutura, arquiteturas e componentes. A computação em nuvem é um paradigma no qual o processamento, armazenamento e ferramentas computacionais são oferecidos como um serviço através da Internet. Aplicações baseadas nesta tecnologia possuem a caracteristica de serem extensíveis e facilmente incorporadas a outras que precisem consumir os seus serviços\cite{Perin2014}.
+O termo computação em nuvem teve sua origem em 2006 durante uma palestra Eric Schmidt sobre como o Google gerenciava seus servidores\cite{taurion2009}. A palavra nuvem é uma abstração para a Internet e toda a sua complexidade de infraestrutura, arquiteturas e componentes. A computação em nuvem é um paradigma no qual o processamento, armazenamento e ferramentas computacionais são oferecidos como um serviço através da Internet. Aplicações baseadas nesta tecnologia possuem a característica de serem extensíveis e facilmente incorporadas a outras que precisem consumir os seus serviços\cite{Perin2014}.
 
 A plataforma CMPaaS usa esta capacidade de expansão e integração da computação em nuvem para oferecer serviços de criação, edição e gestão de mapas conceituais que poderão ser acessados por qualquer usuário no mundo.
 
@@ -592,7 +592,7 @@ A plataforma foi implementada com a utilização de Web Services, que precisam d
 	\legend{Fonte: \citeonline[p. 81]{Perin2014}}
 \end{figure}
 
-A \autoref{fig_cmpaas} ilustra a arquiterura do CMPaaS. Podemos observar como as aplicações fornecidas pelo portal utilizam os serviços da plataforma, muitas vezes consumindo mais de um serviço que é oferecido por ela. Além disso, é ilutrado também como um portal externo pode aproveitar os serviços disponíveis no CMPaaS, como é o caso do plugin que será apresentado posteriormente neste trabalho. Ele trata-se de um editor de mapas conceituais que armazena os mapas, criados por ele, na plataforma. Assim ele utiliza dois serviços fornecidos pelo CMPaaS, o de armazenagem de mapas e o de autenticação. 
+A \autoref{fig_cmpaas} ilustra a arquitetura do CMPaaS. Podemos observar como as aplicações fornecidas pelo portal utilizam os serviços da plataforma, muitas vezes consumindo mais de um serviço que é oferecido por ela. Além disso, é ilustrado também como um portal externo pode aproveitar os serviços disponíveis no CMPaaS, como é o caso do plugin que será apresentado posteriormente neste trabalho. Ele trata-se de um editor de mapas conceituais que armazena os mapas, criados por ele, na plataforma. Assim ele utiliza dois serviços fornecidos pelo CMPaaS, o de armazenagem de mapas e o de autenticação. 
 
 A estrutura interna da plataforma é composta por cinco camadas\cite{Perin2014}, conforme mostra a \autoref{fig_cmpaas2}.
 
