--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -15,6 +15,42 @@
 	title = {{Apoio Automatizado {\`{a}} Avalia{\c{c}}{\~{a}}o da Aprendizagem Utilizando Mapas Conceituais}}
 }
 
+@book{flanagan2006,
+	title={JavaScript: the definitive guide},
+	author={Flanagan, David},
+	year={2006},
+	publisher={" O'Reilly Media, Inc."}
+}
+
+@article{crockford2006,
+	title={The application/json media type for javascript object notation (json)},
+	author={Crockford, Douglas},
+	year={2006}
+}
+
+@article{minetto2007,
+	title={Frameworks para Desenvolvimento em PHP},
+	author={Minetto, Elton Lu{\'\i}s},
+	journal={S{\~a}o Paulo: Novatec},
+	year={2007}
+}
+
+
+@article{Richards2010,
+	abstract = {The JavaScript programming language is widely used for web programming and, increasingly, for general purpose computing. As such, improving the correctness, security and performance of JavaScript applications has been the driving force for research in type systems, static analysis and compiler techniques for this language. Many of these techniques aim to reign in some of the most dynamic features of the language, yet little seems to be known about how programmers actually utilize the language or these features. In this paper we perform an empirical study of the dynamic behavior of a corpus of widely-used JavaScript programs, and analyze how and why the dynamic features are used. We report on the degree of dynamism that is exhibited by these JavaScript programs and compare that with assumptions commonly made in the literature and accepted industry benchmark suites.},
+	author = {Richards, Gregor and Lebresne, Sylvain and Burg, Brian and Vitek, Jan},
+	doi = {10.1145/1806596.1806598},
+	file = {:home/israel/Downloads/p1-richards.pdf:pdf},
+	isbn = {9781450300193},
+	issn = {03621340},
+	journal = {Proceedings of the 2010 ACM SIGPLAN conference on Programming language design and implementation},
+	keywords = {dynamic behavior,dynamic met-,execution tracing,javascript,program analysis,rics},
+	pages = {1},
+	title = {{An analysis of the dynamic behavior of JavaScript programs}},
+	url = {http://doi.acm.org/10.1145/1806596.1806598{\%}5Cnhttp://dl.acm.org/ft{\_}gateway.cfm?id=1806598{\&}type=pdf{\%}5Cnhttp://portal.acm.org/citation.cfm?doid=1806596.1806598},
+	year = {2010}
+}
+
 
 @MastersThesis{Perin2014,
 	author = {Perin, Wagner de Andrade},
